# manufactory

./: docker-compose.yml  pyproject.toml
alembic/: env.py
alembic/versions/: 508218d45c1e_add_sensor_histories_relationship_to_.py  5b26d49a21f8_add_unique_constraint_to_sensor_name.py  6e532912dad1_ref_alarms_tables.py  9990467dfa7e_add_enum_status_column_in_place_table.py  d057ed6c6039_fix_tables.py
api-gateway/: nginx.conf
services/alarm/: Dockerfile  README.md  pyproject.toml
services/alarm/src/: app.py
services/alarm/src/routers/: router.py
services/alarm/src/utils/: __init__.py  utils.py
services/item_checker/: Dockerfile  README.md  pyproject.toml
services/plc_data_hub/: Dockerfile
services/plc_data_hub/src/: app.py
services/plc_data_hub/src/core/: plc_reader.py  reader.py
services/plc_data_hub/src/plc/: plc_client.py
services/plc_data_hub/src/utils/: utils.py
services/plc_reader/: Dockerfile  README.md  pyproject.toml
services/plc_reader/src/: app.py
services/plc_reader/src/core/: data_processor.py  processors.py  reader.py  sensor_cache.py  tag_manager.py
services/plc_reader/src/plc/: __init__.py  plc_client.py  plc_models.py  plc_tag.py
services/plc_reader/src/utils/: __init__.py  utils.py
services/redis_to_db/: Dockerfile  README.md  pyproject.toml  test.py
services/redis_to_db/scr/: redis_to_db_worker.py
services/redis_to_db/src/: app.py
services/redis_to_db/src/routers/: routers.py
services/redis_to_db/src/utils/: __init__.py  redis_to_db.py
shared/config/: config.py
shared/db/: base.py
shared/db/industrial_stg/: database.py
shared/db/manufactory/: database.py
shared/db/manufactory/models/: __init__.py  alarm_history.py  alarm_message.py  alarm_messages.py  alarm_tag.py  operations_history.py  place.py  places.py  plc_data.py  sensor.py  sensor_history.py
shared/logger/: __init__.py  logger.py
shared/redis/: redis_manager.py
shared/telegram/: telegram.py
shared/utils_single_run/telegram/: get_telegram_param.py  send_test_messages.py
src/: database.py
src/api/: app.py
src/api/operation/: router.py  services.py
src/db/: base.py
