[tool.poetry]
name = "item-checker"
version = "0.1.0"
description = ""
authors = ["petrl <sup686@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.13"
fastapi = "^0.115.6"
jinja2 = "^3.1.5"
uvicorn = "^0.34.0"
sqlalchemy = "^2.0.36"
pydantic-settings = "^2.7.0"
asyncpg = "^0.30.0"
python-multipart = "^0.0.20"
greenlet = "^3.1.1"
psycopg2-binary = "^2.9.10"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
